# djangoProject1

./: .env_example  README.md  example.json  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_delete_confirm.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/add_product/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py  0002_initial.py  0002_product_owner.py  0003_alter_product_options.py  0003_alter_product_price.py  0004_alter_product_category_alter_product_price.py  0004_alter_product_options.py  0005_alter_product_description_alter_product_name.py  0005_product_views_counter.py  0006_alter_product_options_product_stock_and_more.py  0006_product_is_publish.py  0007_alter_product_options_remove_product_stock_and_more.py  0008_product_view_counter.py
catalog/templates/: base.html  home.html  product_list.html  products_detail.html
catalog/templates/catalog/: base.html  categories_list.html  category_detail.html  contacts.html  home.html  product_delete_confirm.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: login.html  profile_detail.html  (+2 more)
(+2 files in other folders)
