[project]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (>=8.31.0,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django (==4.2.2)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

